debug config - trying to sort kernel panic -

--- a/arch/arm64/configs/aosp_kitakami_sumire_defconfig
+++ b/arch/arm64/configs/aosp_kitakami_sumire_defconfig
@@ -232,7 +232,7 @@ CONFIG_BT_BCM43XX=y
 CONFIG_BT_BCM_COMBO=y
 CONFIG_BT_PROTOCOL_DRIVER=y
 CONFIG_LINE_DISCIPLINE_DRIVER=y
-CONFIG_V4L2_FM_DRIVER=y
+CONFIG_V4L2_FM_DRIVER=n
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
@@ -385,28 +385,28 @@ CONFIG_REGULATOR_QPNP_LABIBB_SOMC=y
 CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_CPR=y
 CONFIG_SOMC_LCD_OCP_ENABLED=y
-CONFIG_MEDIA_SUPPORT=y
-CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_RADIO_SUPPORT=y
-CONFIG_MEDIA_CONTROLLER=y
-CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEOBUF2_MSM_MEM=y
-CONFIG_MEDIA_USB_SUPPORT=y
-CONFIG_V4L_PLATFORM_DRIVERS=y
-CONFIG_MSMB_CAMERA=y
-CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_MSM_CPP=y
-CONFIG_MSM_CCI=y
-CONFIG_MSM_CSI30_HEADER=y
-CONFIG_MSM_CSIPHY=y
-CONFIG_MSM_CSID=y
-CONFIG_MSM_EEPROM=y
-CONFIG_MSM_ISPIF=y
-CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
-CONFIG_MSMB_JPEG=y
-CONFIG_MSM_FD=y
-CONFIG_SONY_CAM_V4L2=y
-CONFIG_MSM_VIDC_V4L2=y
+CONFIG_MEDIA_SUPPORT=n
+CONFIG_MEDIA_CAMERA_SUPPORT=n
+CONFIG_MEDIA_RADIO_SUPPORT=n
+CONFIG_MEDIA_CONTROLLER=n
+CONFIG_VIDEO_V4L2_SUBDEV_API=n
+CONFIG_VIDEOBUF2_MSM_MEM=n
+CONFIG_MEDIA_USB_SUPPORT=n
+CONFIG_V4L_PLATFORM_DRIVERS=n
+CONFIG_MSMB_CAMERA=n
+CONFIG_MSM_CAMERA_SENSOR=n
+CONFIG_MSM_CPP=n
+CONFIG_MSM_CCI=n
+CONFIG_MSM_CSI30_HEADER=n
+CONFIG_MSM_CSIPHY=n
+CONFIG_MSM_CSID=n
+CONFIG_MSM_EEPROM=n
+CONFIG_MSM_ISPIF=n
+CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=n
+CONFIG_MSMB_JPEG=n
+CONFIG_MSM_FD=n
+CONFIG_SONY_CAM_V4L2=n
+CONFIG_MSM_VIDC_V4L2=n
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_MSM_KGSL=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
