--- a/arch/arm64/configs/aosp_kitakami_sumire_defconfig
+++ b/arch/arm64/configs/aosp_kitakami_sumire_defconfig
@@ -23,7 +23,13 @@ CONFIG_USER_NS=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=5
-# CONFIG_KALLSYMS is not set
+CONFIG_RD_BZIP2=y
+CONFIG_RD_LZMA=y
+CONFIG_DECOMPRESS_BZIP2=y
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_PANIC_TIMEOUT=5
+CONFIG_KALLSYMS=y
+CONFIG_KALLSYMS_ALL=y
 # CONFIG_PCI_QUIRKS is not set
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
@@ -48,6 +54,7 @@ CONFIG_PREEMPT=y
 CONFIG_ARMV7_COMPAT=y
 CONFIG_ZSMALLOC=y
 CONFIG_SECCOMP=y
+CONFIG_PROC_DEVICETREE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
@@ -307,6 +314,7 @@ CONFIG_I2C_MSM_V2=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
+CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
@@ -348,13 +356,16 @@ CONFIG_REGULATOR_QPNP_LABIBB_SOMC=y
 CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_CPR=y
 CONFIG_SOMC_LCD_OCP_ENABLED=y
+CONFIG_REGULATOR_CPR2_GFX=y
 CONFIG_MEDIA_SUPPORT=n
 CONFIG_MEDIA_CAMERA_SUPPORT=n
+CONFIG_MEDIA_DIGITAL_TV_SUPPORT=n
 CONFIG_MEDIA_RADIO_SUPPORT=n
 CONFIG_MEDIA_CONTROLLER=n
 CONFIG_VIDEO_V4L2_SUBDEV_API=n
 CONFIG_VIDEOBUF2_MSM_MEM=n
 CONFIG_MEDIA_USB_SUPPORT=n
+CONFIG_USB_VIDEO_CLASS=n
 CONFIG_V4L_PLATFORM_DRIVERS=n
 CONFIG_MSMB_CAMERA=n
 CONFIG_MSM_CAMERA_SENSOR=n
@@ -365,6 +376,7 @@ CONFIG_MSM_CSIPHY=n
 CONFIG_MSM_CSID=n
 CONFIG_MSM_EEPROM=n
 CONFIG_MSM_ISPIF=n
+CONFIG_MSM_ISPIF_V2=n
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=n
 CONFIG_MSMB_JPEG=n
 CONFIG_MSM_FD=n
@@ -624,6 +636,37 @@ CONFIG_DEBUG_FS=y
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
+CONFIG_LOCKUP_DETECTOR=y
+CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
+CONFIG_PANIC_ON_RECURSIVE_FAULT=y
+CONFIG_SCHEDSTATS=y
+CONFIG_TIMER_STATS=y
+CONFIG_DEBUG_OBJECTS=y
+CONFIG_DEBUG_OBJECTS_FREE=y
+CONFIG_DEBUG_OBJECTS_TIMERS=y
+CONFIG_DEBUG_OBJECTS_WORK=y
+CONFIG_DEBUG_OBJECTS_RCU_HEAD=y
+CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=y
+CONFIG_SLUB_DEBUG_ON=y
+CONFIG_DEBUG_KMEMLEAK=y
+CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
+CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
+CONFIG_DEBUG_TASK_STACK_SCAN_OFF=y
+CONFIG_DEBUG_MODULE_SCAN_OFF=y
+CONFIG_DEBUG_SPINLOCK=y
+CONFIG_DEBUG_MUTEXES=y
+CONFIG_DEBUG_ATOMIC_SLEEP=y
+CONFIG_DEBUG_STACK_USAGE=y
+CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_MEMORY_INIT=y
+CONFIG_DEBUG_LIST=y
+CONFIG_FAULT_INJECTION=y
+CONFIG_FAIL_PAGE_ALLOC=y
+CONFIG_FAULT_INJECTION_DEBUG_FS=y
+CONFIG_FAULT_INJECTION_STACKTRACE_FILTER=y
+CONFIG_SLUB_DEBUG_PANIC_ON=y
+CONFIG_IPC_LOGGING=y
+CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_DYNAMIC_DEBUG=y
@@ -650,6 +693,7 @@ CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_PUBLIC_KEY_ALGO_RSA=y
 CONFIG_X509_CERTIFICATE_PARSER=y
+CONFIG_SOCKEV_NLMCAST=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
