--- a/arch/arm64/configs/aosp_kitakami_sumire_defconfig
+++ b/arch/arm64/configs/aosp_kitakami_sumire_defconfig
@@ -12,7 +12,6 @@ CONFIG_LOG_BUF_SHIFT=20
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
@@ -28,10 +27,11 @@ CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
+CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=5
+CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_ALL=y
-# CONFIG_KALLSYMS is not set
 # CONFIG_PCI_QUIRKS is not set
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
@@ -56,6 +56,7 @@ CONFIG_PREEMPT=y
 CONFIG_ARMV7_COMPAT=y
 CONFIG_ZSMALLOC=y
 CONFIG_SECCOMP=y
+CONFIG_PROC_DEVICETREE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
@@ -79,7 +80,6 @@ CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
-CONFIG_XFRM=y
 CONFIG_XFRM_USER=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_NET_KEY=y
@@ -93,9 +93,6 @@ CONFIG_IP_PNP_DHCP=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
-CONFIG_INET_XFRM_TUNNEL=y
-CONFIG_INET_XFRM_MODE_TRANSPORT=y
-CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
 CONFIG_IPV6=y
@@ -342,6 +339,7 @@ CONFIG_HAS_DMA=y
 CONFIG_QCOM_SPS_DMA=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
+CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
@@ -385,13 +383,16 @@ CONFIG_REGULATOR_QPNP_LABIBB_SOMC=y
 CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_CPR=y
 CONFIG_SOMC_LCD_OCP_ENABLED=y
+CONFIG_REGULATOR_CPR2_GFX=y
 CONFIG_MEDIA_SUPPORT=n
 CONFIG_MEDIA_CAMERA_SUPPORT=n
+CONFIG_MEDIA_DIGITAL_TV_SUPPORT=n
 CONFIG_MEDIA_RADIO_SUPPORT=n
 CONFIG_MEDIA_CONTROLLER=n
 CONFIG_VIDEO_V4L2_SUBDEV_API=n
 CONFIG_VIDEOBUF2_MSM_MEM=n
 CONFIG_MEDIA_USB_SUPPORT=n
+CONFIG_USB_VIDEO_CLASS=n
 CONFIG_V4L_PLATFORM_DRIVERS=n
 CONFIG_MSMB_CAMERA=n
 CONFIG_MSM_CAMERA_SENSOR=n
@@ -402,6 +403,7 @@ CONFIG_MSM_CSIPHY=n
 CONFIG_MSM_CSID=n
 CONFIG_MSM_EEPROM=n
 CONFIG_MSM_ISPIF=n
+CONFIG_MSM_ISPIF_V2=n
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=n
 CONFIG_MSMB_JPEG=n
 CONFIG_MSM_FD=n
@@ -675,6 +677,7 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_FS=y
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
 CONFIG_LOCKUP_DETECTOR=y
+CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
@@ -688,6 +691,8 @@ CONFIG_SLUB_DEBUG_ON=y
 CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
+CONFIG_DEBUG_TASK_STACK_SCAN_OFF=y
+CONFIG_DEBUG_MODULE_SCAN_OFF=y
 CONFIG_DEBUG_SPINLOCK=y
 CONFIG_DEBUG_MUTEXES=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
@@ -702,13 +707,15 @@ CONFIG_FAULT_INJECTION_STACKTRACE_FILTER=y
 CONFIG_SLUB_DEBUG_PANIC_ON=y
 CONFIG_IPC_LOGGING=y
 CONFIG_BLK_DEV_IO_TRACE=y
+# CONFIG_DEBUG_PREEMPT is not set
+# CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_OOPS_LOG_BUFFER=y
 CONFIG_LOG_BUF_MAGIC=y
 CONFIG_OOPS_LOG_BUF_SHIFT=17
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
 CONFIG_STRICT_DEVMEM=y
-CONFIG_EARLY_PRINTK=y
+# CONFIG_EARLY_PRINTK is not set
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_FREE_PAGES_RDONLY=y
 CONFIG_KERNEL_TEXT_RDONLY=y
@@ -733,10 +740,6 @@ CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
 CONFIG_SOCKEV_NLMCAST=y
-CONFIG_ASYMMETRIC_KEY_TYPE=y
-CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
-CONFIG_PUBLIC_KEY_ALGO_RSA=y
-CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
