--- a/arch/arm64/configs/aosp_kitakami_sumire_defconfig
+++ b/arch/arm64/configs/aosp_kitakami_sumire_defconfig
@@ -75,6 +75,7 @@ CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
+CONFIG_XFRM=y
 CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
@@ -85,6 +86,9 @@ CONFIG_IP_ROUTE_VERBOSE=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
+CONFIG_INET_XFRM_TUNNEL=y
+CONFIG_INET_XFRM_MODE_TRANSPORT=y
+CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
 CONFIG_IPV6_PRIVACY=y
