--- a/arch/arm64/configs/ranchu_defconfig
+++ b/arch/arm64/configs/ranchu_defconfig
@@ -171,5 +171,21 @@ CONFIG_FAIL_PAGE_ALLOC=y
 CONFIG_SLUB_DEBUG_PANIC_ON=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
+CONFIG_SECURITY=y
+CONFIG_SECURITY_NETWORK=y
+CONFIG_LSM_MMAP_MIN_ADDR=4096
+CONFIG_SECURITY_SELINUX=y
+CONFIG_CRYPTO_NULL=y
+CONFIG_CRYPTO_CTR=y
+CONFIG_CRYPTO_XCBC=y
+CONFIG_CRYPTO_MD4=y
+CONFIG_CRYPTO_TWOFISH=y
+CONFIG_ARM64_CRYPTO=y
+CONFIG_CRYPTO_SHA1_ARM64_CE=y
+CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
+CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 # CONFIG_FTRACE is not set
 CONFIG_ATOMIC64_SELFTEST=y
