--- a/arch/arm/configs/apq8084-perf_defconfig
+++ b/arch/arm/configs/apq8084-perf_defconfig
@@ -87,6 +87,7 @@ CONFIG_UNIX=y
 CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_MSM_MHI=y
+CONFIG_DIAGFWD_MHI_BRIDGE=y
 CONFIG_MSM_RMNET_MHI=y
 CONFIG_MSM_MHI_UCI=y
 CONFIG_INET=y
@@ -535,6 +536,7 @@ CONFIG_QPNP_CLKDIV=y
 CONFIG_QPNP_USB_DETECT=y
 CONFIG_QCA1530=y
 CONFIG_MSM_BUS_SCALING=y
+CONFIG_MSM_BUSPM_DEV=m
 CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_MSM_IOMMU_V1=y
 CONFIG_IOMMU_PGTABLES_L2=y
@@ -571,9 +573,9 @@ CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_MSM_TZ_LOG=y
-CONFIG_EXT2_FS=y
-CONFIG_EXT2_FS_XATTR=y
-CONFIG_EXT3_FS=y
+CONFIG_EXT2_FS=n
+CONFIG_EXT2_FS_XATTR=n
+CONFIG_EXT3_FS=n
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
