--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -87,6 +87,7 @@ CONFIG_UNIX=y
 CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_MSM_MHI=y
+CONFIG_DIAGFWD_MHI_BRIDGE=y
 CONFIG_MSM_RMNET_MHI=y
 CONFIG_MSM_MHI_UCI=y
 CONFIG_MSM_MHI_DEBUG=y
@@ -537,6 +538,7 @@ CONFIG_QPNP_CLKDIV=y
 CONFIG_QPNP_USB_DETECT=y
 CONFIG_QCA1530=y
 CONFIG_MSM_BUS_SCALING=y
+CONFIG_MSM_BUSPM_DEV=m
 CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_MSM_IOMMU_V1=y
 CONFIG_MSM_IOMMU_PMON=y
