config: arm: ranchu_defconfig: alter to meet new branch expectations

--- a/arch/arm64/configs/ranchu_defconfig
+++ b/arch/arm64/configs/ranchu_defconfig
@@ -189,3 +189,4 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 # CONFIG_FTRACE is not set
 CONFIG_ATOMIC64_SELFTEST=y
+CONFIG_VIRTUALIZATION=y
