--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1039,6 +1039,9 @@ config IOMMU_API
 config MSM_GPIOMUX
 	bool
 
+config MSM_NATIVE_RESTART
+	bool
+
 config MSM_BUS_RPM_MULTI_TIER_ENABLED
 	bool "RPM Multi-tiering Configuration"
 	depends on MSM_BUS_SCALING
