--- a/arch/arm/boot/dts/qcom/msm8974-hammerhead/msm8974-hammerhead-camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8974-hammerhead/msm8974-hammerhead-camera.dtsi
@@ -35,7 +35,7 @@
 		qcom,actuator-src = <&actuator0>;
 		qcom,eeprom-src = <&eeprom0>;
 		qcom,flash-type = <0>;
-		qcom,led-flash-src = <&led_flash0>;
+	/*	qcom,led-flash-src = <&led_flash0>; */
 		qcom,mount-angle = <90>;
 		qcom,sensor-name = "imx179";
 		cam_vdig-supply = <&pm8941_l3>;
