arm: rest of hammerhead & ifdef sony specifics, bcmdhd still has issues, drivers/usb/gadget/u_ether.c is having a bad day, dont know if BCMDHD is PCIE or SDIO for .config

--- a/arch/arm/configs/cyanogenmod_hammerhead_defconfig
+++ b/arch/arm/configs/cyanogenmod_hammerhead_defconfig
@@ -1400,7 +1400,9 @@ CONFIG_WLAN=y
 # CONFIG_WCNSS_CORE is not set
 # CONFIG_WCNSS_MEM_PRE_ALLOC is not set
 # CONFIG_ATH_CARDS is not set
+CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_BCMDHD=y
+CONFIG_BCMDHD_PCIE=y
 CONFIG_BCM4339=y
 CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/etc/wifi/bcmdhd.cal"
