--- a/drivers/net/wireless/controlfnc/Makefile
+++ b/drivers/net/wireless/controlfnc/Makefile
@@ -1,1 +1,4 @@
-obj-$(CONFIG_WIFI_CONTROL_FUNC) += somc-wifi-ctrl.o dhd_custom_memprealloc.o
+obj-$(CONFIG_WIFI_CONTROL_FUNC) += dhd_custom_memprealloc.o
+ifneq ($(CONFIG_MACH_LGE),y)
+obj-$(CONFIG_WIFI_CONTROL_FUNC) += somc-wifi-ctrl.o
+endif
