--- a/arch/arm/boot/dts/qcom/msm8974-hammerhead/msm8974-hammerhead.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8974-hammerhead/msm8974-hammerhead.dtsi
@@ -119,6 +119,75 @@
 		qcom,taiko-mclk-clk-freq = <9600000>;
 	};
 
+	sdcc1: qcom,sdcc@f9824000 {
+	vdd-supply = <&pm8941_l20>;
+	vdd-io-supply = <&pm8941_s3>;
+
+	qcom,vdd-always-on;
+	qcom,vdd-lpm-sup;
+	qcom,vdd-voltage-level = <2950000 2950000>;
+	qcom,vdd-current-level = <800 500000>;
+
+	qcom,vdd-io-always-on;
+	qcom,vdd-io-voltage-level = <1800000 1800000>;
+	qcom,vdd-io-current-level = <250 154000>;
+
+	qcom,pad-pull-on = <0x0 0x3 0x3>; /* no-pull, pull-up, pull-up */
+	qcom,pad-pull-off = <0x0 0x3 0x3>; /* no-pull, pull-up, pull-up */
+	qcom,pad-drv-on = <0x1 0x1 0x1>; /* 4mA, 4mA, 4mA */
+	qcom,pad-drv-off = <0x0 0x0 0x0>; /* 2mA, 2mA, 2mA */
+
+	qcom,nonremovable;
+	qcom,wakeup-on-idle;
+	status = "ok";
+};
+
+sdcc2: qcom,sdcc@f9824000  {
+	#address-cells = <0>;
+	interrupt-parent = <&sdcc2>;
+	interrupts = <0 1 2>;
+	#interrupt-cells = <1>;
+	interrupt-map-mask = <0xffffffff>;
+
+	/* Qualcomm / Broadcom WiFi solution definition.
+	 * You must choose one solution
+	 */
+
+	/* Qualcomm WiFi solution - Start */
+	/*
+	interrupt-map = <0 &intc 0 125 0
+		1 &intc 0 220 0
+		2 &msmgpio 35 0x3>;
+	interrupt-names = "core_irq", "bam_irq", "wlan_oob_irq";
+	qcom,bus-width = <4>;
+
+	vdd-supply = <&pm8941_l11>;
+	qcom,sdcc-sup-voltages = <1800 2950>;
+	qcom,sdcc-nonremovable = <1>;
+	qcom,sup-voltages = <1800 2950>;
+	qcom,nonremovable;
+	*/
+	/* Qualcomm WiFi solution - End */
+
+	/* Broadcom WiFi solution - Start */
+	interrupt-map = <0 &intc 0 125 0
+		1 &intc 0 220 0
+		2 &msmgpio 44 0x3>;
+	interrupt-names = "core_irq", "bam_irq", "wlan_oob_irq";
+	qcom,bus-width = <4>;
+
+	qcom,sdcc-sup-voltages = <1800 2950>;
+	qcom,sup-voltages = <1800 2950>;
+	qcom,wifi-control-func;
+	qcom,not-use-vdd;
+	vdd-io-supply = <&pm8941_s3>;
+	/* Broadcom WiFi solution - End */
+
+	qcom,vdd-io-voltage-level = <1800000 1800000>;
+	qcom,vdd-io-current-level = <6 22000>;
+	status = "ok";
+};
+
 	maxim_detic:maxim_max1462x {
 		compatible = "maxim,max1462x";
 		status = "ok";
@@ -303,28 +372,6 @@
 			status = "disabled";
 		};
 	};
-};
-&sdhc_1 {
-	vdd-supply = <&pm8941_l20>;
-	vdd-io-supply = <&pm8941_s3>;
-
-	qcom,vdd-always-on;
-	qcom,vdd-lpm-sup;
-	qcom,vdd-voltage-level = <2950000 2950000>;
-	qcom,vdd-current-level = <800 500000>;
-
-	qcom,vdd-io-always-on;
-	qcom,vdd-io-voltage-level = <1800000 1800000>;
-	qcom,vdd-io-current-level = <250 154000>;
-
-	qcom,pad-pull-on = <0x0 0x3 0x3>; /* no-pull, pull-up, pull-up */
-	qcom,pad-pull-off = <0x0 0x3 0x3>; /* no-pull, pull-up, pull-up */
-	qcom,pad-drv-on = <0x1 0x1 0x1>; /* 4mA, 4mA, 4mA */
-	qcom,pad-drv-off = <0x0 0x0 0x0>; /* 2mA, 2mA, 2mA */
-
-	qcom,nonremovable;
-	qcom,wakeup-on-idle;
-	status = "ok";
 };
 
 &usb_otg {
