--- a/arch/arm/boot/dts/qcom/msm8974-hammerhead/msm8974-hammerhead.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8974-hammerhead/msm8974-hammerhead.dtsi
@@ -21,6 +21,18 @@
 #include "msm8974-hammerhead-sensor.dtsi"
 
 / {
+		memory {
+		ramoops_mem: ramoops_region@0 {
+			linux,reserve-contiguous-region;
+			linux,reserve-region;
+			reg = <0x3e8e0000 0x200000>;
+			linux,remove-completely;
+			label = "ramoops_mem";
+		};
+	};
+};
+
+/ {
 	aliases {
 		uart99 = &uart10;
 	};
@@ -33,7 +45,24 @@
 &soc {
 	serial@f991d000 {
 		status = "ok";
-	};
+	ramoops {
+		compatible = "ramoops";
+		status = "ok";
+
+		android,ramoops-buffer-start = <0x3e8e0000>;
+		android,ramoops-buffer-size = <0x200000>;
+		android,ramoops-console-size = <0x100000>;
+		android,ramoops-record-size = <0x10000>;
+		android,ramoops-ftrace-size = <0x10000>;
+		android,ramoops-pmsg-size = <0x80000>;
+		android,ramoops-dump-oops = <0x1>;
+		linux,contiguous-region = <&ramoops_mem>;
+		android,ramoops-hole {
+			compatible = "qcom,msm-contig-mem";
+			qcom,memblock-reserve = <0x3e8e0000 0x200000>;
+	   	};
+      };
+   };
 
 	qcom,mdss_mdp@fd900000 {
 		qcom,mdss_fb_primary {
