fs: exfat: The warnings bohered me, so update to version 2.2.0-3arter97 - https://github.com/arter97/exfat-linux/

--- a/fs/exfat/Makefile
+++ b/fs/exfat/Makefile
@@ -1,16 +1,42 @@
-# exFAT filesystem driver rules
+#
+# Makefile for the linux FAT12/16/32(VFAT)/64(exFAT) filesystem driver.
+#
 
-exfat := exfat
+ifneq ($(KERNELRELEASE),)
+# Called from inline kernel build
+# DKMS_DEFINE
+obj-$(CONFIG_EXFAT_FS) += exfat.o
 
-ifeq ($(CONFIG_EXFAT_COMPAT_TUXERA),y)
-exfat := texfat
+exfat-objs	:= super.o core.o core_exfat.o blkdev.o fatent.o cache.o \
+		   nls.o misc.o extent.o xattr.o
+else
+# Called from external kernel module build
+
+KERNELRELEASE	?= $(shell uname -r)
+KDIR	?= /lib/modules/${KERNELRELEASE}/build
+MDIR	?= /lib/modules/${KERNELRELEASE}
+PWD	:= $(shell pwd)
+
+export CONFIG_EXFAT_FS := m
+
+all:
+	$(MAKE) -C $(KDIR) M=$(PWD) modules
+
+clean:
+	$(MAKE) -C $(KDIR) M=$(PWD) clean
+
+help:
+	$(MAKE) -C $(KDIR) M=$(PWD) help
+
+install: exfat.ko
+	rm -f ${MDIR}/kernel/fs/exfat/exfat.ko
+	install -m644 -b -D exfat.ko ${MDIR}/kernel/fs/exfat/exfat.ko
+	depmod -aq
+
+uninstall:
+	rm -rf ${MDIR}/kernel/fs/exfat
+	depmod -aq
+
 endif
 
-obj-$(CONFIG_EXFAT_FS) := $(exfat).o
-
-$(exfat)-y := exfat_super.o exfat_misc.o exfat_api.o \
-	   exfat_blkdev.o exfat_cache.o \
-	   exfat_data.o exfat_global.o exfat_nls.o \
-	   exfat_oal.o exfat_upcase.o exfat_xattr.o
-
-ccflags-y += -DEXFAT_VERSION=\"1.2.24\"
+.PHONY : all clean install uninstall
