--- a/fs/exfat/Kconfig
+++ b/fs/exfat/Kconfig
@@ -1,25 +1,27 @@
 config EXFAT_FS
 	tristate "exFAT fs support"
-	default m
+	depends on BLOCK
 	select NLS
 	select NLS_UTF8
+	select NLS_CODEPAGE_437
+	select NLS_ISO8859_1
 	help
-	  Say Y or M here to include support for the exFAT filesystem.
+	  If you want to use the exFAT file system, then you must say Y or M
+	  here to inlucde exFAT support. exFAT supports winnt short-name rule.
+	  (winnt: emulate the Windows NT rule for display/create.)
 
-	  To compile this as a module, choose M: the module will be called
+	  To compile this as a module, choose M here: the module will be called
 	  exfat.
 
+if EXFAT_FS
 config EXFAT_DEFAULT_CODEPAGE
 	int "Default codepage for exFAT"
-	depends on EXFAT_FS
 	default 437
 	help
 	  This option should be set to the codepage of your exFAT filesystems.
-	  It can be overridden with the "codepage" mount option.
 
 config EXFAT_DEFAULT_IOCHARSET
 	string "Default iocharset for exFAT"
-	depends on EXFAT_FS
 	default "utf8"
 	help
 	  Set this to the default input/output character set you'd
@@ -27,48 +29,38 @@ config EXFAT_DEFAULT_IOCHARSET
 	  that most of your exFAT filesystems use, and can be overridden
 	  with the "iocharset" mount option for exFAT filesystems.
 
-	  In most cases, this should be set to utf8.
-
-	  Enable any character sets you need in File Systems/Native Language
-	  Support.
-
 config EXFAT_VIRTUAL_XATTR
 	bool "Virtual xattr support for exFAT"
-	depends on EXFAT_FS && SECURITY_SELINUX
+	default y
 	help
-	  Say Y here to enable virtual xattr support, allowing you to
-	  set a default SELinux label for files on the exFAT filesystem.
+	  To support virtual xattr.
 
 config EXFAT_VIRTUAL_XATTR_SELINUX_LABEL
-	string "Default SELinux label string for exFAT"
+	string "Default string for SELinux label"
+	default "u:object_r:exfat:s0"
 	depends on EXFAT_VIRTUAL_XATTR
-	default "u:object_r:sdcard_external:s0"
 	help
-	  Set this to the default string for exFAT SELinux label.
-
-config EXFAT_DISCARD
-	bool "Discard support for exFAT"
-	default y
-	depends on EXFAT_FS
-	help
-	  Say Y here to enable support for the block discard feature
-	  on exFAT filesystems.
-
-	  You must mount with the discard option to use it.
-
-config EXFAT_COMPAT_TUXERA
-	bool "Tuxera compatibility for exFAT"
-	depends on EXFAT_FS
-	help
-	  Say Y here to have the exFAT driver also register as texfat
-	  and support extra mount options for drop-in replacement on
-	  systems previously using Tuxera's commercial exFAT driver.
-
-	  If you are building exFAT as a module, this will change
-	  the module's name to texfat.
+	  Set this to the default string for SELinux label.
+	  Support for "u:object_r:exfat:s0" was added in Android Pie,
+	  if you're running Oreo or lower, use "u:object_r:vfat:s0" instead.
 
 config EXFAT_DEBUG
-	bool "Debugging support for exFAT"
-	depends on EXFAT_FS
-	help
-	  Say Y here to enable debugging in exFAT driver.
+	bool "enable debug features"
+
+if EXFAT_DEBUG
+
+config EXFAT_DBG_MSG
+	bool "enable debug messages"
+
+config EXFAT_DBG_BUGON
+	bool "enable strict BUG_ON() for debugging"
+
+config EXFAT_DBG_WARNON
+	bool "enable strict WARN_ON() for debugging"
+
+endif # if EXFAT_DEBUG
+
+config EXFAT_UEVENT
+	bool "enable uevent"
+
+endif # if EXFAT_FS
