--- a/arch/arm/configs/cyanogenmod_hammerhead_defconfig
+++ b/arch/arm/configs/cyanogenmod_hammerhead_defconfig
@@ -1402,7 +1402,7 @@ CONFIG_WLAN=y
 # CONFIG_ATH_CARDS is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_BCMDHD=y
-CONFIG_BCMDHD_PCIE=y
+CONFIG_BCMDHD_SDIO=y
 CONFIG_BCM4339=y
 CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/etc/wifi/bcmdhd.cal"
@@ -2047,29 +2047,29 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_REGULATOR_RPM_SMD=y
 CONFIG_REGULATOR_QPNP=y
-CONFIG_MEDIA_SUPPORT=y
+CONFIG_MEDIA_SUPPORT=n
 
 #
 # Multimedia core support
 #
-CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_MEDIA_CAMERA_SUPPORT=n
 # CONFIG_MEDIA_ANALOG_TV_SUPPORT is not set
 # CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
 # CONFIG_MEDIA_RC_SUPPORT is not set
-CONFIG_MEDIA_CONTROLLER=y
-CONFIG_VIDEO_DEV=y
-CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEO_V4L2=y
-CONFIG_VIDEO_ADV_DEBUG=y
+CONFIG_MEDIA_CONTROLLER=n
+CONFIG_VIDEO_DEV=n
+CONFIG_VIDEO_V4L2_SUBDEV_API=n
+CONFIG_VIDEO_V4L2=n
+CONFIG_VIDEO_ADV_DEBUG=n
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-CONFIG_VIDEOBUF_GEN=y
-CONFIG_VIDEOBUF2_CORE=y
-CONFIG_VIDEOBUF2_MEMOPS=y
-CONFIG_VIDEOBUF2_DMA_CONTIG=y
-CONFIG_VIDEOBUF2_VMALLOC=y
-CONFIG_VIDEOBUF2_DMA_SG=y
-CONFIG_VIDEOBUF2_MSM_MEM=y
+CONFIG_VIDEOBUF_GEN=n
+CONFIG_VIDEOBUF2_CORE=n
+CONFIG_VIDEOBUF2_MEMOPS=n
+CONFIG_VIDEOBUF2_DMA_CONTIG=n
+CONFIG_VIDEOBUF2_VMALLOC=n
+CONFIG_VIDEOBUF2_DMA_SG=n
+CONFIG_VIDEOBUF2_MSM_MEM=n
 # CONFIG_VIDEO_V4L2_INT_DEVICE is not set
 # CONFIG_TTPCI_EEPROM is not set
 
@@ -2077,8 +2077,8 @@ CONFIG_VIDEOBUF2_MSM_MEM=y
 # Media drivers
 #
 # CONFIG_MEDIA_USB_SUPPORT is not set
-CONFIG_V4L_PLATFORM_DRIVERS=y
-CONFIG_SOC_CAMERA=y
+CONFIG_V4L_PLATFORM_DRIVERS=n
+CONFIG_SOC_CAMERA=n
 # CONFIG_SOC_CAMERA_PLATFORM is not set
 # CONFIG_VIDEO_SH_MOBILE_CSI2 is not set
 # CONFIG_VIDEO_SH_MOBILE_CEU is not set
@@ -2089,19 +2089,19 @@ CONFIG_SOC_CAMERA=y
 # Qualcomm MSM Camera And Video
 #
 # CONFIG_MSM_CAMERA is not set
-CONFIG_MSMB_CAMERA=y
-CONFIG_MSMB_CAMERA_DEBUG=y
-CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_MSM_CPP=y
-CONFIG_MSM_CCI=y
+CONFIG_MSMB_CAMERA=n
+CONFIG_MSMB_CAMERA_DEBUG=n
+CONFIG_MSM_CAMERA_SENSOR=n
+CONFIG_MSM_CPP=n
+CONFIG_MSM_CCI=n
 # CONFIG_MSM_CSI20_HEADER is not set
 # CONFIG_MSM_CSI22_HEADER is not set
-CONFIG_MSM_CSI30_HEADER=y
+CONFIG_MSM_CSI30_HEADER=n
 # CONFIG_MSM_CSI31_HEADER is not set
-CONFIG_MSM_CSIPHY=y
-CONFIG_MSM_CSID=y
-CONFIG_MSM_EEPROM=y
-CONFIG_MSM_ISPIF=y
+CONFIG_MSM_CSIPHY=n
+CONFIG_MSM_CSID=n
+CONFIG_MSM_EEPROM=n
+CONFIG_MSM_ISPIF=n
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_S5K3L1YX is not set
 # CONFIG_IMX135 is not set
@@ -2118,9 +2118,9 @@ CONFIG_MSM_ISPIF=y
 # CONFIG_OV8865 is not set
 # CONFIG_s5k4e1 is not set
 # CONFIG_OV12830 is not set
-CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
-CONFIG_MSMB_JPEG=y
-CONFIG_MSM_VIDC_V4L2=y
+CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=n
+CONFIG_MSMB_JPEG=n
+CONFIG_MSM_VIDC_V4L2=n
 # CONFIG_MSM_WFD is not set
 # CONFIG_TSPP is not set
 # CONFIG_CI_BRIDGE_SPI is not set
@@ -2561,7 +2561,7 @@ CONFIG_USB_STORAGE_ENE_UB6250=y
 # CONFIG_USB_QCOM_KS_BRIDGE is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG=y
-CONFIG_USB_GADGET_DEBUG_FILES=y
+CONFIG_USB_GADGET_DEBUG_FILES=n
 # CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
