--- a/arch/arm/configs/aosp_rhine_honami_defconfig
+++ b/arch/arm/configs/aosp_rhine_honami_defconfig
@@ -684,6 +684,7 @@ CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
+CONFIG_KERNEL_TEXT_RDONLY=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XCBC=y
