--- a/arch/arm/configs/ranchu_defconfig
+++ b/arch/arm/configs/ranchu_defconfig
@@ -22,6 +22,8 @@ CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_BLK_DEV_INITRD=y
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
@@ -180,6 +182,10 @@ CONFIG_SERIO_AMBAKMI=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_EARLY_PRINTK=y
+CONFIG_DEBUG_LL_UART_PL01X=y
+CONFIG_DEBUG_UART_PHYS=0x9000000
+CONFIG_DEBUG_UART_VIRT=0xf8090000
 CONFIG_SERIAL_AMBA_PL011=y
 CONFIG_SERIAL_AMBA_PL011_CONSOLE=y
 CONFIG_VIRTIO_CONSOLE=y
@@ -255,11 +261,12 @@ CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_LIST=y
 CONFIG_FAULT_INJECTION=y
 CONFIG_FAIL_PAGE_ALLOC=y
-CONFIG_SLUB_DEBUG_PANIC_ON=y
+# CONFIG_SLUB_DEBUG_PANIC_ON=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
+CONFIG_KERNEL_TEXT_RDONLY=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_VIRTUALIZATION=y
